crates/ferromark_renderer/src/html/tests/snapshots/ferromark_renderer__html__tests__blocks__render_github_style_callout_with_inline_content_after_marker.snap
---
source: crates/ferromark_renderer/src/html/tests/blocks.rs
expression: html
---
<blockquote class="ox-callout ox-callout--note">
<p class="ox-callout-title">Note</p>
<p>Supports <strong>inline</strong> content</p>
</blockquote>
