crates/ferromark_renderer/src/html/tests/snapshots/ferromark_renderer__html__tests__blocks__render_heading_ids_are_unique_and_unicode.snap
---
source: crates/ferromark_renderer/src/html/tests/blocks.rs
expression: html
---
<h2 id="はじめに">はじめに</h2>
<h2 id="はじめに-1">はじめに</h2>
