crates/ferromark_renderer/src/html/tests/snapshots/ferromark_renderer__html__tests__blocks__render_inline_toc_requires_standalone_text.snap
---
source: crates/ferromark_renderer/src/html/tests/blocks.rs
expression: html
---
<p>See [[toc]] here</p>
<p><code>[[toc]]</code></p>
<h2 id="intro">Intro</h2>
